[gd_scene load_steps=4 format=3 uid="uid://svp00wf0htwi"]

[ext_resource type="Script" uid="uid://du4qx1r6koj7h" path="res://Scenes/menu.gd" id="1"]
[ext_resource type="FontFile" uid="uid://bllob0jxtuak8" path="res://Assets/PressStart2P-Regular.ttf" id="2_cayip"]
[ext_resource type="AudioStream" uid="uid://c7s6rwet7vyj2" path="res://Assets/bg_sound.mp3" id="3_cayip"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.4
anchor_right = 0.6
anchor_bottom = 0.6
offset_left = -136.8
offset_top = -73.2
offset_right = 152.8
offset_bottom = 41.2
theme_override_constants/separation = 60
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cayip")
theme_override_font_sizes/font_size = 40
text = "Chess Masters"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PlayButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cayip")
theme_override_font_sizes/font_size = 20
text = "Player X Player"
flat = true

[node name="PlayAIButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cayip")
theme_override_font_sizes/font_size = 20
text = "Player X IA"
flat = true

[node name="QuitButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cayip")
theme_override_font_sizes/font_size = 20
text = "Sair"
flat = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_cayip")
autoplay = true
